2005-01-07  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/powerpc/powerpc64/dl-trampoline.S: Use register names.

	* sysdeps/powerpc/powerpc32/dl-trampoline.S: New file.
	* sysdeps/powerpc/powerpc32/dl-machine.h: Remove trampoline code here.
	Define ARCH_LA_PLTENTER and ARCH_LA_PLTEXIT.
	* sysdeps/generic/ldsodefs.h (struct audit_ifaces): Add ppc32 variants.
	* elf/tst-auditmod1.c: Add ppc32 support.
	* sysdeps/powerpc/powerpc32/bits/link.h: New file.
	* sysdeps/powerpc/powerpc64/bits/link.h: Add ppc32 definitions.

	* malloc/malloc.c (malloc_printerr): Print program name as part of
	error message.

	* misc/sys/cdefs.h (__attribute_warn_unused_result__): Define.
	* stdlib/stdlib.h: Make realloc with
	__attribute_warn_unused_result__ instead of __wur.
	* malloc/malloc.h: Add __wur and __attribute_warn_unused_result__
	markers as in <stdlib.h>.

	* libio/stdio.h: Remove __wur from rename and remove.
	* posix/unistd.h: Remove __wur from dup2.

2005-01-03  Andreas Jaeger  <aj@suse.de>

	* elf/Makefile (tests): Revert patch from 2005-01-03.

2005-01-07  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/init-first.c (__libc_init_first): Don't
	make __libc_init_first hidden.

	* elf/rtld.c [!DONT_USE_BOOTSTRAP_MAP] (_dl_start_final): Initialize
	l_relocated of rtld map.
	* sysdeps/powerpc/powerpc64/dl-trampoline.S: New file.
	* sysdeps/powerpc/powerpc64/dl-machine.h: Remove trampoline code here.
	Define ARCH_LA_PLTENTER and ARCH_LA_PLTEXIT.
	* sysdeps/generic/ldsodefs.h (struct audit_ifaces): Add ppc64 variants.
	* elf/tst-auditmod1.c: Add ppc64 support.
	* sysdeps/powerpc/powerpc64/bits/link.h: New file.

2005-01-06  Roland McGrath  <roland@redhat.com>

	[BZ #633]
	* sysdeps/unix/sysv/linux/futimes.c (__futimes): Catch errno values
	indicating file-name lookup errors, and return ENOSYS or EBADF instead.

2005-01-06  Ulrich Drepper  <drepper@redhat.com>

	* csu/elf-init.c (__libc_csu_fini): Don't do anything here.