@@ -1,5 +1,9 @@
 2005-01-07  Ulrich Drepper  <drepper@redhat.com>
 
+	* sysdeps/powerpc/powerpc32/dl-trampoline.S (_dl_prof_resolve):
+	Extend _dl_prof_resolve to add pass extra parameters to
+	_dl_profile_fixup and set up structure with register content.
+
 	* sysdeps/powerpc/powerpc64/dl-trampoline.S: Use register names.
 
 	* sysdeps/powerpc/powerpc32/dl-trampoline.S: New file.
